app/assets/stylesheets/modules/_improve-this-page.scss
.improve-this-page {
  $container-padding: 10px;

  position: relative;
  padding: $container-padding $container-padding 0;
  background-color: $govuk-blue;
  color: $white;

  a:link,
  a:visited {
    color: $white;
  }

  input[type="text"],
  textarea {
    @include box-sizing(border-box);
    display: block;
    width: 100%;
  }

  &__is-useful-question {
    @include bold-16;

    display: inline;
  }

  &__page-is-useful-button {
    margin-right: 0.2em;
  }

  &__anything-wrong {
    float: right;
  }

  &__label {
    @include bold-16;
  }

  &__submit {
    @include button($white);

    color: $govuk-blue;
  }

  &__section {
    margin-bottom: 1em;
  }

  &__error {
    background-color: $error-colour;
  }

  &__error:first-letter {
    text-transform: capitalize;
  }

  &__close {
    position: absolute;
    top: $container-padding;
    right: $container-padding;
    padding-top: 5px;
    @include core-16;

    @include media(tablet) {
      padding-top: 0;
    }
  }

  @include print {
    display: none;
  }
}

